[package]
name = "tuix_baseview_test_vst2"
version = "0.1.0"
authors = ["George Atkinson <geomyles@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tuix_baseview_test_vst2"
crate-type = ["cdylib"]

[dependencies]
baseview = {git = "https://github.com/RustAudio/baseview", branch = "master"}
dirs = "3"
log = "0.4"
log-panics = "2"
raw-window-handle = "0.3"
simplelog = "0.8"
vst = "0.2"
rtrb = "0.1.1"
tuix = {git = "https://github.com/geom3trik/tuix", branch = "main"}
tuix_baseview = {git = "https://github.com/geom3trik/tuix_baseview", branch = "main"}

